--- a/khugle 메인.html
+++ b/khugle 메인.html
@@ -3,23 +3,79 @@
 <html>
 
 <head>
-  <title> 쿠글 - khugle </title>
+  <title>  쿠글 - khugle </title>
   <meta charset="utf-8">
+
+  <style>
+
+  a {
+    color : black;
+    text-decoration: none;
+  }
+
+
+  h1 {
+    font-size: 45px;
+    text-align: center;
+    border: 5px solid red;
+    margin: 0;
+    padding: 25px;
+  }
+
+  ul{
+    width : 100px;
+    margin: 0;
+    
+    padding:20px;
+  }
+
+  h3 {
+    color : black;
+    width : 100px;
+    margin : 0;
+
+    padding:20px
+  }
+
+  img {
+    padding : 50px;
+  }
+
+  #gridmain{
+    display: grid;
+    grid-template-columns: 150px 1fr;
+
+  }
+  #menu{
+    border-right:3px solid red;
+  }
+
+  </style>
+
 </head>
 
 <body>
 
   <h1> 쿠글 - KHUgle 경희대 a to z </h1>
-  <h4> 국제캠퍼스 </h4>
+<div id ="gridmain">
+      <div id = "menu">
 
-  <ul>
-    <li> <a href = "마을.html" >마을</a> </li>
-    <li> <a href = "정건.html" >정건</a> </li>
-    <li> <a href = "캠퍼스 내부.html" >캠퍼스 내부</a> </li>
-  </ul>
+        <h3> <a href = "khugle 메인.html" > 국제캠퍼스 </a> </h3>
 
-  <img src="사진\1.jpg">
+        <ul>
+          <li> <a href = "마을.html" >마을</a> </li>
+          <li> <a href = "정건.html" >정건</a> </li>
+          <li> <a href = "캠퍼스 내부.html" >캠퍼스 내부</a> </li>
+        </ul>
 
+      </div>
+
+      <div id = "img">
+
+        <img src="사진\1.jpg">
+
+      </div>
+  </div>
 
 
 </body>
