--- a/정건.html
+++ b/정건.html
@@ -5,9 +5,50 @@
 <head>
   <title> 쿠글 - khugle </title>
   <meta charset="utf-8">
+  <style>
+
+  a {
+    text-decoration: none;
+  }
+  h1 {
+    font-size: 45px;
+    text-align: center;
+    border: 5px solid red;
+    margin: 0;
+    padding: 25px;
+  }
+  ul{
+    width : 100px;
+    margin: 0;
+    border-right : 3px solid red;
+    padding:20px;
+  }
+
+  h3 {
+    color : black;
+    width : 100px;
+    margin : 0;
+    border-right:3px solid red;
+    padding:20px;
+  }
+
+  .saw {
+    color : gray;
+  }
+
+  </style>
 </head>
 
 <body>
+
+  <h1> 쿠글 - KHUgle 경희대 a to z </h1>
+  <h3> <a href = "khugle 메인.html"> 국제캠퍼스 </a> </h3>
+
+  <ul>
+    <li> <a href = "마을.html" class = "saw" >마을</a> </li>
+    <li> <a href = "정건.html" style = "color:red" >정건</a> </li>
+    <li> <a href = "캠퍼스 내부.html" class = "saw" >캠퍼스 내부</a> </li>
+  </ul>
 
   <h2> 정건 </h2>
 
